--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Livestreaming stuff",
   "private": true,
   "scripts": {
-    "overlay:dev": "parcel overlay/index.html",
-    "overlay:build": "parcel build overlay/index.html -d dist/overlay --public-url ./"
+    "overlay:dev": "webpack serve --open --env development --config overlay/webpack.config.js",
+    "overlay:build": "webpack --env production --config overlay/webpack.config.js"
   },
   "repository": {
     "type": "git",
@@ -22,7 +22,13 @@
     "random-weighted-choice": "^0.1.4"
   },
   "devDependencies": {
-    "parcel-bundler": "^1.12.4",
-    "sass": "^1.27.0"
+    "css-loader": "^6.4.0",
+    "html-webpack-plugin": "^5.4.0",
+    "sass": "^1.43.3",
+    "sass-loader": "^12.2.0",
+    "style-loader": "^3.3.1",
+    "webpack": "^5.59.1",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.3.1"
   }
 }
