Some pixel tweaks

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/MattIPv4/stream#readme",
   "dependencies": {
     "pet-panda": "^2.1.1-dev.1",
+    "pixelarticons": "^1.4.0",
     "query-string": "^6.13.5",
     "random-weighted-choice": "^0.1.4"
   },
