--- a/package.json
+++ b/package.json
@@ -18,20 +18,20 @@
   },
   "homepage": "https://github.com/MattIPv4/stream#readme",
   "dependencies": {
-    "pet-panda": "^2.1.1-dev.1",
+    "pet-panda": "^2.1.1",
     "pixelarticons": "^1.4.0",
-    "query-string": "^6.13.5",
+    "query-string": "^7.0.1",
     "random-weighted-choice": "^0.1.4"
   },
   "devDependencies": {
-    "css-loader": "^6.4.0",
-    "html-webpack-plugin": "^5.4.0",
+    "css-loader": "^6.5.0",
+    "html-webpack-plugin": "^5.5.0",
     "resolve-url-loader": "^4.0.0",
-    "sass": "^1.43.3",
-    "sass-loader": "^12.2.0",
+    "sass": "^1.43.4",
+    "sass-loader": "^12.3.0",
     "style-loader": "^3.3.1",
-    "webpack": "^5.59.1",
+    "webpack": "^5.61.0",
     "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.3.1"
+    "webpack-dev-server": "^4.4.0"
   }
 }
