--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Livestreaming stuff",
   "private": true,
   "scripts": {
-    "overlay:dev": "parcel overlay/index.html",
-    "overlay:build": "parcel build overlay/index.html -d dist/overlay --public-url ./"
+    "overlay:dev": "webpack serve --open --env development --config overlay/webpack.config.js",
+    "overlay:build": "webpack --env production --config overlay/webpack.config.js"
   },
   "repository": {
     "type": "git",
@@ -18,11 +18,20 @@
   },
   "homepage": "https://github.com/MattIPv4/stream#readme",
   "dependencies": {
-    "query-string": "^6.13.5",
+    "pet-panda": "^2.1.1",
+    "pixelarticons": "^1.4.0",
+    "query-string": "^7.0.1",
     "random-weighted-choice": "^0.1.4"
   },
   "devDependencies": {
-    "parcel-bundler": "^1.12.4",
-    "sass": "^1.27.0"
+    "css-loader": "^6.5.0",
+    "html-webpack-plugin": "^5.5.0",
+    "resolve-url-loader": "^4.0.0",
+    "sass": "^1.43.4",
+    "sass-loader": "^12.3.0",
+    "style-loader": "^3.3.1",
+    "webpack": "^5.61.0",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.4.0"
   }
 }
