Run through Babel to keep OBS happy

--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "random-weighted-choice": "^0.1.4"
   },
   "devDependencies": {
+    "@babel/core": "^7.16.0",
+    "@babel/preset-env": "^7.16.4",
+    "babel-loader": "^8.2.3",
     "css-loader": "^6.5.0",
     "html-webpack-plugin": "^5.5.0",
     "resolve-url-loader": "^4.0.0",
